test/toolstest/effect_parser/valid/02_extra_whitespace.def
/*
 * Test case with extra whitespace between tokens
 * This should still parse correctly
 */

struct    [[ge::params(  type  =  TEST_WHITESPACE  ,  name  =  "TestWhitespace"  )]]    TestWhitespaceParams
{
    float    value1    ;
    int     value2     ;
    bool    flag    ;

    double    extra    =    3.14    ;
};

