test/toolstest/effect_parser/invalid/05_missing_struct_name.def
/*
 * Invalid: Missing struct name after attribute
 */

struct [[ge::params(type=TEST_NO_NAME, name="TestNoName")]] {
    float value1;
    int value2;
};
